Add module path to JCA provider jar.